Refactor (#52)
* chore: Modified swagger docs #17

* feat: Added request-timeout environment variable #28

* feat: Added post tipnote handler, added input-validation and better error-handling #31

* feat: Added check for htrflow availability #31

* feat: Separated model-endpoints, better error-handling and input-validation #31

* feat: Modified logger and statusresponsewriter #29

* feat: Added context middleware (WIP) #29

* feat: Modified routes, added middleware and better validation #27

* feat: Logging environment on launch #17

* chore: Fixup for consistency #38

* feat: Robust model-mapping, required local files and better error-handling #37

* feat: Added tipnote logic and cleanup #17

* feat: Added constants, modified logdata-logic #17

* feat: Added internal server error logging #17

* feat: Added htrflow as own domain, and test #17

* feat: Modified image logic, added test #38

* feat: Reworked pipeline logic, added tests #17

* feat: Reworked model, added tests #37

* feat: initializing the new modelstore logic #17 #37

* feat: Reworked atr handlers with new domain logic #31

* feat: Reworked model handlers with new domain logic #31

* feat: Added htrflow check for status-endpoints #31

* feat: Modified tests #17
